--- a/Lab-5_202001405.md
+++ b/Lab-5_202001405.md
@@ -11,7 +11,7 @@ Here is the code I have used to perform statistical analysis on is taken from ht
 
 **Static Analysis Tool Used:** Pylint. Pylint analyses your code without actually running it. It checks for errors, enforces a coding standard, looks for code smells, and can make suggestions about how the code could be refactored.\
 **Command to Install Pylint:** python -m pip install pylint \
-**Command to Run Pylint on any Python File:** pylint app.py  
+**Command to Run Pylint on any Python File:** py -m pylint app.py  
 
 ![Screenshot 2023-03-24 152415](https://user-images.githubusercontent.com/75679608/227489218-d948419e-5eee-4eaa-9b60-0520f56821a3.png)
 
